--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -1,15 +1,20 @@
 [Unit]
-Description=Small description of the service
+Description=gonic service
 After=network.target
 
 [Service]
 Type=simple
 User=__APP__
 Group=__APP__
-WorkingDirectory=__INSTALL_DIR__/
-ExecStart=__INSTALL_DIR__/script
-StandardOutput=append:/var/log/__APP__/__APP__.log
-StandardError=inherit
+
+StateDirectory=gonic
+CacheDirectory=gonic
+
+Restart=on-failure
+RestartSec=10
+
+ExecStart=__INSTALL_DIR__/gonic -config-path __INSTALL_DIR__/config
+
 
 # Sandboxing options to harden security
 # Depending on specificities of your service/app, you may need to tweak these
